texlive-extra (2012.20120611-3) UNRELEASED; urgency=low

  * UNRELEASED!!!
  * fix ulqda using Digest::SHA1 which is not available (LP: #1045516)

 -- Norbert Preining <preining@debian.org>  Tue, 04 Sep 2012 10:28:17 +0900

texlive-extra (2012.20120611-2) unstable; urgency=low

  * fix broken mf2pt1 info file that triggered broken info/dir file
    under certain circumstances (Closes: #683201)

 -- Norbert Preining <preining@debian.org>  Mon, 30 Jul 2012 11:08:33 +0900

texlive-extra (2012.20120611-1) unstable; urgency=low

  * new upstream checkout (TL2012 release)

 -- Norbert Preining <preining@debian.org>  Mon, 11 Jun 2012 12:01:55 +0900

texlive-extra (2012.20120529-1) unstable; urgency=low

  * new upstream checkout
  * add transitional dummy texlive-latex3 package to upgrade to
    texlive-latex-recommended (Closes: #673797)
  * don't ship STIX fonts, but link from fonts-stix and depend on it

 -- Norbert Preining <preining@debian.org>  Tue, 29 May 2012 19:19:02 +0900

texlive-extra (2012.20120516-1) unstable; urgency=low

  * new upstream snapshot based on TL2012 tlpretest
  * switch to xz compression for orig and deb (Closes: #672428)

 -- Norbert Preining <preining@debian.org>  Wed, 16 May 2012 08:22:07 +0900

texlive-extra (2011.20120509-1) unstable; urgency=low

  * new upstream snapshot (Closes: #670336)
  * texpower take over
    . ship the TL packages texpower and tpslifonts (formerly blacklisted)
    . provide a dummy transitional package texpower
    . add the necessary conflicts and depends
  * fix wrong link in README.source (Closes: #671920)
  * pdfjam take over (actually done already earlier)
    . ship the TL package pdfjam
    . provide a dummy transitional package pdfjam
    . add the necessary conflicts and depends

 -- Norbert Preining <preining@debian.org>  Wed, 25 Apr 2012 12:01:15 +0900

texlive-extra (2011.20120424-1) unstable; urgency=low

  * new upstream snapshot
    - includes updates ucs package (Closes: #635382)