@@ -2,8 +2,9 @@ texlive-extra (2012.20120611-3) UNRELEASED; urgency=low
 
   * UNRELEASED!!!
   * fix ulqda using Digest::SHA1 which is not available (LP: #1045516)
+  * pack texlive-latex-extra-doc with extreme compression (Closes: #675537)
 
- -- Norbert Preining <preining@debian.org>  Tue, 04 Sep 2012 10:28:17 +0900
+ -- Norbert Preining <preining@debian.org>  Wed, 17 Oct 2012 21:04:11 +0900
 
 texlive-extra (2012.20120611-2) unstable; urgency=low
 
